# sensor-test

./: .gitignore  .gitmodules  CMakeLists.txt
example/motor-pwm/: main.cpp
example/sen0343/: main.cpp
firmware/: BHI360.h  BHI360_cmd.h  BHI360_full.fw  BHI360_full.h  Bosch_Shuttle3_BHI360.fw  Bosch_Shuttle3_BHI360.h  Bosch_Shuttle3_BHI360_Aux_BMM150.fw  Bosch_Shuttle3_BHI360_Aux_BMM150.h  Bosch_Shuttle3_BHI360_BMM150.fw  Bosch_Shuttle3_BHI360_BMM150.h  Bosch_Shuttle3_BHI360_BMM150_HeadOrientation_hearable.fw  Bosch_Shuttle3_BHI360_BMM150_HeadOrientation_hearable.h  Bosch_Shuttle3_BHI360_BMM350C_HeadOrientation_hearable.fw  Bosch_Shuttle3_BHI360_BMM350C_HeadOrientation_hearable.h  Bosch_Shuttle3_BHI360_HeadOrientation_hearable.fw  Bosch_Shuttle3_BHI360_HeadOrientation_hearable.h  Bosch_Shuttle3_BHI360_Turbo.fw  Bosch_Shuttle3_BHI360_Turbo.h
src/: CMakeLists.txt  common.cpp  common.h  main.c  main.cpp
src/bosch/: common.c  common.h
src/hardware/: bhy2.h
src/hardware/config/: gpio.h  i2c.h  spi.h
src/hardware/config/pico/: i2c.c  spi.c
tools/fw2header/: CMakeLists.txt  main.cpp
